# sw3d

./: .gitignore  CMakeLists.txt  README.md  instant-font.h  main.cpp  model-loader.cpp  model-loader.h  old-stuff.h  sw3d.cpp  sw3d.h  types.cpp  types.h
docs/: NOTE.txt  _config.yml  index.md  p0.md  p1.md  p2.md  p3.md  p4.md
docs/_includes/: footer.html  head.html
docs/_layouts/: default.html
docs/images/sources/: barycentric-coords.xcf  bresenham-trick.xcf  cross-product-2d.xcf  cross-product.xcf  line-drawing.xcf  line-points-moved.xcf  pit-test.xcf  scanline-fb.xcf  scanline-ft.xcf  sr-overdraw.xcf  tri-capture-modes-conflict.xcf  tri-vertex-order.xcf  tris-after-sort.xcf  winding-order-2d.xcf  winding-order-fix.xcf
docs/layouts/: default.html
tests/: CMakeLists.txt  main.cpp
tests/bresenham-generator/: CMakeLists.txt  blg.cpp  blg.h  main.cpp
tests/bresenham-hindu/: CMakeLists.txt  main.cpp
tests/cube-3d/: CMakeLists.txt  main.cpp
tests/custom-rasterizer/: CMakeLists.txt  main.cpp
tests/obj-loader/: CMakeLists.txt  main.cpp
tests/overdraw-test/: CMakeLists.txt  main.cpp
tests/pit-rasterizer/: CMakeLists.txt  main.cpp  pit-rasterizer.cpp  pit-rasterizer.h
tests/pit-rasterizer-tlr/: CMakeLists.txt  main.cpp  pit-rasterizer-tlr.cpp  pit-rasterizer-tlr.h
tests/pixel-float-coords/: CMakeLists.txt  main.cpp
tests/rasterizer-bugs/: CMakeLists.txt  main.cpp
tests/scanline-rasterizer/: CMakeLists.txt  main.cpp  scanline-rasterizer.cpp  scanline-rasterizer.h  srtl.cpp  srtl.h
tests/scanline-rasterizer-chili/: CMakeLists.txt  main.cpp  srtl-chili.cpp  srtl-chili.h
tests/scanline-rasterizer-dda/: CMakeLists.txt  main.cpp  srtl-dda.cpp  srtl-dda.h
tests/scanline-rasterizer-dumb/: CMakeLists.txt  main.cpp  srd.cpp  srd.h
tests/top-left-rule/: CMakeLists.txt  main.cpp
tests/various/: CMakeLists.txt  main.cpp
