add_subdirectory(various)
add_subdirectory(obj-loader)
add_subdirectory(scanline-rasterizer)
add_subdirectory(bresenham-hindu)
add_subdirectory(bresenham-generator)
add_subdirectory(pit-rasterizer)
add_subdirectory(overdraw-test)
add_subdirectory(top-left-rule)
add_subdirectory(cube-3d)
add_subdirectory(rasterizer-bugs)
